# socksfinder

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  askama.toml  build.rs
samples/: jobs.yaml  service.template
src/: lib.rs  main.rs
static/: comparison.htm  comparison.html  index.htm
tests/: build-from-latest-frwiki-dump-and-query.sh  fast-build-from-latest-frwiki-dump-and-query.sh  version.rs
