[package]
name = "socksfinder"
version = "0.6.0-dev"
description = "Search engine for sock puppets on Wikimedia projects"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/socksfinder"
homepage = "https://github.com/Arkanosis/socksfinder"
repository = "https://github.com/Arkanosis/socksfinder"

readme = "README.md"
license = "ISC"

keywords = ["sock", "puppet", "sockpuppet", "wikimedia", "wikipedia"]
categories = ["command-line-utilities"]

edition = "2018"

[dependencies]
actix-files = "0.2"
actix-rt = "1.1"
actix-web = "2.0"
byteorder = "1.3"
docopt = "1.1"
fst = "0.4"
mime = "0.3"
number_prefix = "0.4"
prettytable-rs = "0.8"
quick-xml = "0.18"
serde = "1.0"
serde_derive = "1.0"
