[package]
name = "socksfinder"
version = "0.8.0-dev"
description = "Search engine for sock puppets on Wikimedia projects"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/socksfinder"
homepage = "https://github.com/Arkanosis/socksfinder"
repository = "https://github.com/Arkanosis/socksfinder"

readme = "README.md"
license = "ISC"

keywords = ["sock", "puppet", "sockpuppet", "wikimedia", "wikipedia"]
categories = ["command-line-utilities"]

edition = "2018"
build = "build.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4.2"
askama = "0.11"
askama_actix = "0.13"
byteorder = "1.4"
docopt = "1.1"
fst = "0.4"
mime = "0.3"
number_prefix = "0.4"
prettytable-rs = "0.9"
quick-xml = "0.25"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
vergen = "7.4"
